--- a/python/jupyterlab_widgets/package.json
+++ b/python/jupyterlab_widgets/package.json
@@ -51,13 +51,13 @@
     "@jupyter-widgets/controls": "^5.0.9",
     "@jupyter-widgets/output": "^6.0.8",
     "@jupyterlab/application": "^3.0.0 || ^4.0.0",
-    "@jupyterlab/apputils": "^3.0.0 || ^4.0.0",
     "@jupyterlab/console": "^3.0.0 || ^4.0.0",
     "@jupyterlab/docregistry": "^3.0.0 || ^4.0.0",
     "@jupyterlab/logconsole": "^3.0.0 || ^4.0.0",
     "@jupyterlab/mainmenu": "^3.0.0 || ^4.0.0",
     "@jupyterlab/nbformat": "^3.0.0 || ^4.0.0",
     "@jupyterlab/notebook": "^3.0.0 || ^4.0.0",
+    "@jupyterlab/observables": "^5.2.1",
     "@jupyterlab/outputarea": "^3.0.0 || ^4.0.0",
     "@jupyterlab/rendermime": "^3.0.0 || ^4.0.0",
     "@jupyterlab/rendermime-interfaces": "^3.0.0 || ^4.0.0",
@@ -67,6 +67,7 @@
     "@lumino/algorithm": "^1.11.1 || ^2.0.0",
     "@lumino/coreutils": "^1.11.1 || ^2.1",
     "@lumino/disposable": "^1.10.1 || ^2.1",
+    "@lumino/properties": "^2.0.1",
     "@lumino/signaling": "^1.10.1 || ^2.1",
     "@lumino/widgets": "^1.30.0 || ^2.1",
     "@types/backbone": "1.4.14",
